# docker-comfyui

./: .gitignore  README.md  docker-compose.yml  run-and-build-comfy.sh  run-comfy.sh
data/models/: loras
data/models/CogVideo/CogVideoX-5b-I2V/transformer/: diffusion_pytorch_model.safetensors.index.json
data/models/CogVideo/CogVideoX-5b-I2V/vae/: config.json
data/models/LLM/llava-llama-3-8b-text-encoder-tokenizer/: config.json  generation_config.json  model.safetensors.index.json
services/comfy/: Dockerfile  entrypoint.sh  extra_model_paths.yaml
services/comfy/custom_nodes/comfy-mtb/: .tracking
services/comfy/custom_nodes/comfyui-cogvideoxwrapper/: .tracking
services/comfy/custom_nodes/comfyui-custom-scripts/: .tracking
services/comfy/custom_nodes/comfyui-florence2/: .tracking  nodes.py
services/comfy/custom_nodes/comfyui-hunyuanvideowrapper/: .tracking
services/comfy/custom_nodes/comfyui-kjnodes/: .tracking
services/comfy/custom_nodes/comfyui-ltxvideolora/: .tracking  README.md  __init__.py  pyproject.toml
services/comfy/custom_nodes/comfyui-ltxvideolora/nodes/: lora_block_node.py  lora_loader_node.py  lora_selector_node.py
services/comfy/custom_nodes/comfyui-videohelpersuite/: .tracking
services/comfy/workflows/: checkpoint-t2i-lora.json  checkpoint-t2i.json  cogvideox_i2v.json  flux-lora-v1.json  flux-lora-v2.json  flux1dev.json  hunyuan_t2v_lora_v1.json  hunyuan_t2v_v1.json  hyvideo_t2v_v1.json  ltxvideo-i2v-v2.json  ltxvideo-i2v-v3.json  ltxvideo-i2v.json  ltxvideo-t2v.json  ltxvideo-v2v.json  wan_i2v_v2.json  wan_t2v_v2.json
