[project]
name = "comfyui-ltxvideolora"
description = "A set of custom nodes enabling LoRA support for LTX Video"
version = "0.1.1"
readme = "README.md"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/dorpxam/ComfyUI-LTXVideoLoRA"

[tool.comfy]
PublisherId = "dorpxam"
DisplayName = "ComfyUI-LTXVideoLoRA"
Icon = ""